将2个webpack文件修改为3个webpack文件

--- a/package.json
+++ b/package.json
@@ -4,10 +4,10 @@
   "description": "test webpack",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
     "start": "webpack",
-    "server": "webpack-dev-server --open",
-    "build": "set NODE_ENV=production && webpack --config ./webpack.production.config.js --progress"
+    "dev": "webpack-dev-server --open --config webpack.dev.config.js",
+    "test": "set NODE_ENV=development && webpack --config ./webpack.dev.config.js --progress",
+    "build": "set NODE_ENV=production && webpack --config ./webpack.pro.config.js --progress"
   },
   "author": "",
   "license": "ISC",
@@ -27,7 +27,8 @@
     "react-transform-hmr": "^1.0.4",
     "style-loader": "^0.20.1",
     "webpack": "^3.10.0",
-    "webpack-dev-server": "^2.11.1"
+    "webpack-dev-server": "^2.11.1",
+    "webpack-merge": "^4.1.1"
   },
   "dependencies": {
     "react": "^16.2.0",
